# iron_book

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose-dev.yaml  docker-compose-prod.yaml  home-docker-compose.yaml  iron_book.sh  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  setup.bat  setup.ps1  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.yml
apps/android/: gradle.properties  local.properties  settings.gradle
apps/android/app/: build.gradle
apps/api/: .env.example  Cargo.toml  README.md  build.rs
apps/api/.sqlx/: query-23b32f733888f6944304270d7d0ab43f21dc85dc8d7375542bcdcd756b94475e.json  query-4e4ad4e886b19a963bced20100558f3917a3a01266638ceeaa3b45ecb869508f.json  query-523b1d082ce2deb5265b9f39cf60682a9426db001ce3cadf10d0eb5edc5f01b0.json  query-54548012e9a648528d0394de35664134d2e990437e6bab75c2281501056471df.json  query-89bca0443590ae73c952d5135d02fe4a1c9a3612ba5249b04d8c13c4fa11acc3.json  query-8a1faf16cfc5b5c0cf112760a0aa9bf1add4ffa2fe96d794994abd5d372b5534.json  query-9e7e89951e377a9df533a96aa3054c45e70611fd159c26fac3803886321cf2d8.json  query-b2c3f2d986c9188574ef6a2072dcae38590a1a266a0d0e119b0ed6d528fbf94d.json  query-c1d30def48293b2fd5f9e1120f65cf07f601d47f6b04a526d577939987628958.json  query-c53e0611a590b01569460a433b8bed0f21f1c6a3c023a516dcede2b8a3a31721.json  query-ec022cbf609e7ef356e99e9653cf3f016679d5dc0ae218c10d31d4ce42ec6c23.json  query-fa56fa636b9e4aa7155528b303313d44476f70e6ad65c4ef6d9491b0cb09c250.json
apps/api/http/: auth.http  system.http  users.http
apps/api/migrations/: 0001_initial.sql  0002_add_clients_table.sql  schema.sql
apps/api/proto/: auth.proto  system.proto  users.proto
apps/api/src/: README.md  errors.rs  lib.rs  main.rs  proto.rs  state.rs  structs.rs
apps/api/src/db/: auth.rs  common.rs  mod.rs  system.rs  users.rs
apps/api/src/grpc/: auth.rs  system.rs  users.rs
apps/api/src/handlers/: config.rs  db.rs
apps/api/src/log/: mod.rs
apps/api/src/services/: auth.rs  mod.rs  system.rs  users.rs
apps/api/src/views/: auth.rs  system.rs  users.rs
apps/home/: Dockerfile  Dockerfile.dockerignore
apps/home/src/app/: layout.tsx  page.tsx
apps/web/: .env.example  manage.py  pyproject.toml
apps/web/iron_book/: asgi.py  settings.py  urls.py  wsgi.py
apps/web/templates/: base.html  home.html
apps/web/web/: urls.py  views.py
notes/: db_setup_instructions.md  test_user.md
scripts/: utility.sh
(+5 files in other folders)
