[package]
name = "ironbook_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# gRPC dependencies
tonic = "0.12"
prost = "0.13"

# Async and Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }

# Environment and Data Utilities
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
# Required to compile protobuf files to Rust files
tonic-build = "0.12"
