[package]
name = "ironbook_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# gRPC dependencies
tonic = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
tonic-prost = "0.14"

# Async and Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono"
] }

# Environment and Data Utilities
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.103"
serde_json = "1.0.150"
rand = "0.10.2"
chrono = "0.4.45"

[build-dependencies]
# Required to compile protobuf files to Rust files
tonic-prost-build = "0.14"
