[project]
name = "iron_book"
version = "0.1.0"
description = "A Digital Dinancial Ledger"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "django==5.2.15",
    "django-cors-headers==4.9.0",
    "django-environ==0.13.0",
    "django-tailwind[cookiecutter,honcho,reload]==4.4.2",
    "djangorestframework==3.16.1",
    "honcho==2.0.0",
    "whitenoise==6.12.0",
]
